--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ h1{
   <h1>Bạn có lời nhắn nhủ gì đến với Minh Duy?</h1>  
   <form action="
   https://script.google.com/macros/s/AKfycbzxSBABLtB7UkDrMSoz923AHg4l9lXXEtuuWX7asr7OcFVgejn4ubRUqhO7d5QaMFIg/exec
-  " method="post">
+  " method="post" autocomplete='off'>
     <input placeholder="Tên/nickname..." name="Name" type="text" class="info-field">
     <input placeholder="Lời nhắn gửi..." name="Message" type="text" class="info-field">
     <input type="submit" value="Gửi" class="submit-button">
